--- a/templates/menu.html
+++ b/templates/menu.html
@@ -2,6 +2,8 @@
     <head>
         <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
         <title>My Robot Menu</title>
+        <meta charset="UTF-8">
+        <link rel="stylesheet" type="text/css" href="/static/display.css">
     </head>
 
     <body>
@@ -18,11 +20,18 @@
             {% endfor %}
             <li><a href="#" onclick="run('/stop')">Stop</a></li>
         </ul>
+    </body>
 
         <script>
             function run(url) {
-                $.post(url, '', response => $('#message').html(response))
-            }
+                $.post(url, '', response => { $('#message').html(response.message);
+                if(response.redirect) {
+                    setTimeout(()=>window.location.replace('//' + window.location.hostname + ":5001"), 3000);
+                }
+                
+                
+            })
+
+        }
         </script>
-    </body>
 </html>
