--- a/templates/color_track_behavior.html
+++ b/templates/color_track_behavior.html
@@ -1,14 +1,25 @@
 <html>
     <head>
-        <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+        <script src="/static/lib/jquery-3.7.0.min.js"></script>
+        <link rel="stylesheet" type="text/css" href="/static/display.css">
         <title>Robot Image Server</title>
     </head>
 
     <body>
         <h1>Robot Image Server</h1>
         <img src="{{url_for('display')}}"><br>
-        <a href="#" onclick="$.post('/control', {'command': 'start'});">Start</a>
-        <a href="#" onclick="$.post('/control', {'command': 'stop'});">Stop</a><br>
-        <a href="#" onclick="$.post('/control', {'command':'exit'});">Exit</a>
+        <a href="#" id="startbutton" class="button" onclick="$.post('/control', {'command': 'start'});">Start</a>
+        <a href="#" id="stopbutton" class="button" onclick="$.post('/control', {'command': 'stop'});">Stop</a><br>
+        <a class="button" id="exitbutton">Exit</a>
+    
+        <script type="text/javascript">
+             $(() => {
+                $('#exitbutton').click(function() {
+                    $.post('/control', {'command': 'exit'});
+                    window.location.replace('//' + window.location.hostname + ":5000");
+                });
+               })
+        </script>
+    
     </body>
 </html>
