--- a/templates/control_image_behavior.html
+++ b/templates/control_image_behavior.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+        <script src="/static/lib/jquery-3.7.0.min.js"></script>
         <title>Robot Image Server</title>
     </head>
 
