--- a/templates/menu.html
+++ b/templates/menu.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+        <script src="/static/lib/jquery-3.7.0.min.js"></script>
         <title>My Robot Menu</title>
         <meta charset="UTF-8">
         <link rel="stylesheet" type="text/css" href="/static/display.css">
@@ -10,15 +10,15 @@
         <h1>My Robot Menu</h1>
         <p id="message"></p>
 
-        <ul>
+        <ul class="menu">
             {% for item in menu %}
             <li>
-                <a href="#" onclick="run('/run/{{ item.mode_name }}')">
+                <a class="button" href="#" onclick="run('/run/{{ item.mode_name }}')">
                     {{ item.text }}
                 </a>
             </li>
             {% endfor %}
-            <li><a href="#" onclick="run('/stop')">Stop</a></li>
+            <li><a class="button" href="#" onclick="run('/stop')">Stop</a></li>
         </ul>
     </body>
 
